@@ -18,3 +18,4 @@ pod_coverage:
   private:
     - Perl::Critic::Policy::Plicease::ProhibitUnicodeDigitInRegexp
     - Perl::Critic::Policy::Plicease::ProhibitLeadingZeros
+    - Perl::Critic::Policy::Plicease::ProhibitSpecificModules
