@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - (ProhibitSpecificModules) Added new policy
 
 0.04      2021-11-09 10:20:14 -0700
   - Documentation fixes (gh#3 scop++)
